--- a/tourpackage/dalian/dalian-city-tour-details.html
+++ b/tourpackage/dalian/dalian-city-tour-details.html
@@ -183,6 +183,22 @@ Explore Dalian Forest Zoo, home to both lush natural landscapes and rare animals
 <li>Bring sun protection and rain gear as needed</li>
 <li>Tour operates rain or shine</li></ul>
 </section>
+  <section class="reviews">
+  <h2>Guest Reviews</h2>
+  <div class="review">
+    <strong>Sophie – France</strong>
+    <p>"Great! The coastal drive along Binhai Road was refreshing, and Russian Street had a charming atmosphere. Our guide was knowledgeable and friendly. Highly recommend!"</p>
+  </div>
+  <div class="review">
+    <strong>Mark – Italy</strong>
+    <p>"Loved our guide!! The zoo was a highlight, especially the pandas. The sunset view from the hilltop was breathtaking. A perfect day in Dalian."</p>
+  </div>
+  <div class="review">
+    <strong>Joseph – Spain</strong>
+    <p>"Fantastic experience! The Fisherman's Wharf offered beautiful sea views, and Xinghai Square was impressive. Our guide tailored the tour to our interests, making it memorable."</p>
+  </div>
+</section>
+
 </main>
 </div>
 <footer>
