--- a/tourpackage/guangzhou/guangzhou-normal-tour-details.html
+++ b/tourpackage/guangzhou/guangzhou-normal-tour-details.html
@@ -200,6 +200,23 @@ End your tour at a hidden viewpoint with a stunning panorama of the Canton Tower
 <li>Bring sun protection and rain gear as needed</li>
 <li>Tour operates rain or shine</li></ul>
 </section>
+  <section class="reviews">
+  <h2>Guest Reviews</h2>
+  <div class="review">
+    <strong>Nina – Sweden</strong>
+    <p>“Chen Clan Ancestral Hall was stunning! Our guide explained the history clearly and made the visit really enjoyable.”</p>
+  </div>
+  <div class="review">
+    <strong>Mateo – Argentina</strong>
+    <p>“The local food market was a feast for the senses. Our guide helped us pick the best snacks. Loved every minute!”</p>
+  </div>
+  <div class="review">
+    <strong>Aya – Japan</strong>
+    <p>“Strolling around Shamian Island and watching the Canton Tower light show at night was magical. The guide was professional and paced the tour perfectly.”</p>
+  </div>
+</section>
+
+
 </main>
 </div>
 <footer>
