--- a/tourpackage/guilin/guilin-essence-tour-details.html
+++ b/tourpackage/guilin/guilin-essence-tour-details.html
@@ -191,6 +191,23 @@
 <li>Bring sun protection and rain gear as needed</li>
 <li>Tour operates rain or shine</li></ul>
 </section>
+  <section class="reviews">
+  <h2>Guest Reviews</h2>
+  <div class="review">
+    <strong>Hiroshi – Japan</strong>
+    <p>"Fantastic experience! The walk through Dongxi Lane was like stepping back in time, and the lakeside stroll was serene. Our guide made the day memorable with insightful stories. Highly Appreciate!!"</p>
+  </div>
+  <div class="review">
+    <strong>Marco – Italy</strong>
+    <p>"Loved our guide!! The Elephant Trunk Hill was iconic, and the boat cruise through the lakes was peaceful and beautiful. A perfect way to experience Guilin's charm."</p>
+  </div>
+  <div class="review">
+    <strong>Lena – Germany</strong>
+    <p>"Great! The hike up Chuanshan Hill offered stunning views of Guilin's limestone peaks. The osmanthus sachet workshop was a unique cultural experience. Our guide was friendly and knowledgeable. Highly recommend!"</p>
+  </div>
+</section>
+
+
 </main>
 </div>
 <footer>
