--- a/tourpackage/guilin/guilin-heritage-tour-details.html
+++ b/tourpackage/guilin/guilin-heritage-tour-details.html
@@ -190,6 +190,22 @@
 <li>Bring sun protection and rain gear as needed</li>
 <li>Tour operates rain or shine</li></ul>
 </section>
+  <section class="reviews">
+  <h2>Guest Reviews</h2>
+  <div class="review">
+    <strong>Sofia – Brazil</strong>
+    <p>“The ancient town had such a peaceful vibe. Loved learning about bamboo weaving—it was so hands-on. Our guide was super patient and friendly.”</p>
+  </div>
+  <div class="review">
+    <strong>Jamal – South Africa</strong>
+    <p>“Lunch at the local farm was amazing, and the river views blew me away. Guide was knowledgeable and made everything easy to understand.”</p>
+  </div>
+  <div class="review">
+    <strong>Anya – Russia</strong>
+    <p>“The pottery workshop was a highlight! I really enjoyed trying it myself. The scenery by Huangbu Reflection was like a painting. Highly recommend this tour.”</p>
+  </div>
+</section>
+
 </main>
 </div>
 <footer>
