--- a/tourpackage/guilin/guilin-plantation-tour-details.html
+++ b/tourpackage/guilin/guilin-plantation-tour-details.html
@@ -188,6 +188,23 @@ Guzhuang Village: </strong>a tranquil Zhuang minority village nestled at the bas
 <li>Bring sun protection and rain gear as needed</li>
 <li>Tour operates rain or shine</li></ul>
 </section>
+  <section class="reviews">
+  <h2>Guest Reviews</h2>
+  <div class="review">
+    <strong>Elena – Greece</strong>
+    <p>“The oil tea making was something I’d never tried before—so interesting! The local lunch was tasty, and our guide was really patient and friendly.”</p>
+  </div>
+  <div class="review">
+    <strong>Ravi – India</strong>
+    <p>“Hiking through the terraces was amazing. The guide shared lots of stories about the Zhuang culture. Really enjoyed the whole day!”</p>
+  </div>
+  <div class="review">
+    <strong>Mira – Finland</strong>
+    <p>“Such beautiful views from the terraces. The hands-on tea workshop was fun and unique. Our guide made sure everything went smoothly. Highly recommend!”</p>
+  </div>
+</section>
+
+
 </main>
 </div>
 <footer>
