--- a/tourpackage/guilin/yangshuo-unveiled-tour-details.html
+++ b/tourpackage/guilin/yangshuo-unveiled-tour-details.html
@@ -193,6 +193,22 @@ Wander through the timeless streets of Xingping Old Town, a 1,700-year-old town 
 <li>Bring sun protection and rain gear as needed</li>
 <li>Tour operates rain or shine</li></ul>
 </section>
+  <section class="reviews">
+  <h2>Guest Reviews</h2>
+  <div class="review">
+    <strong>Isabella – Portugal</strong>
+    <p>“The boat ride along Yulong River was peaceful and beautiful. Loved exploring Xingping Old Town—it felt like stepping back in time. Our guide was super helpful and friendly.”</p>
+  </div>
+  <div class="review">
+    <strong>Khaled – Egypt</strong>
+    <p>“Great day! The Ten-Mile Gallery scenery was stunning. The guide shared interesting stories about local history and culture. Really enjoyed every part of the tour.”</p>
+  </div>
+  <div class="review">
+    <strong>Maya – South Korea</strong>
+    <p>“The old bridge and the countryside views were breathtaking. The guide made sure we had plenty of time to take photos and asked about our interests. Highly recommend this trip!”</p>
+  </div>
+</section>
+
 </main>
 </div>
 <footer>
