--- a/tourpackage/hangzhou/haining-normal-tour-details.html
+++ b/tourpackage/hangzhou/haining-normal-tour-details.html
@@ -197,6 +197,22 @@
 <li>Tour operates rain or shine</li>
 </ul>
 </section>
+<section class="reviews">
+  <h2>Guest Reviews</h2>
+  <div class="review">
+    <strong>Lena – Germany</strong>
+    <p>“Great! The tidal bore at Yanguan was incredible. The guide was friendly and informative. Highly recommend!”</p>
+  </div>
+  <div class="review">
+    <strong>Mujimi – Japan</strong>
+    <p>“Fantastic experience! The silk museum offered a deep dive into China's textile history. The tidal bore was a natural wonder. Our guide was attentive and made the day memorable. Highly recommend!!”</p>
+  </div>
+  <div class="review">
+    <strong>Mateo – Argentina</strong>
+    <p>“Loved our guide!! The silk museum was fascinating, and the tidal bore was a unique experience. A perfect day trip from Hangzhou.”</p>
+  </div>
+</section>
+
 </main>
 </div>
 <footer>
