--- a/tourpackage/hangzhou/hangzhou-normal-tour-details.html
+++ b/tourpackage/hangzhou/hangzhou-normal-tour-details.html
@@ -200,6 +200,22 @@
 <li>Tour operates rain or shine</li>
 </ul>
 </section>
+  <section class="reviews">
+  <h2>Guest Reviews</h2>
+  <div class="review">
+    <strong>Jane – Brazil</strong>
+    <p>“Wonderful! The walk along Bai Causeway was peaceful, and the legend of the White Snake added a magical touch. The silk museum was fascinating, and the cloisonné workshop was a fun hands-on experience. Our guide was friendly and informative. Highly recommend!”</p>
+  </div>
+  <div class="review">
+    <strong>Santiago – Argentina</strong>
+    <p>“Loved our guide!! The Southern Song Imperial Street had a lively atmosphere, and the art district was a refreshing change from the usual tourist spots. The canal-side stroll at the end was the perfect way to wrap up the day.”</p>
+  </div>
+  <div class="review">
+    <strong>Mishito – Japan</strong>
+    <p>“Fantastic experience! The silk museum offered a deep dive into Hangzhou’s rich textile history. The cloisonné workshop was a unique and creative activity. Our guide was attentive and made the day memorable. Highly recommend!!”</p>
+  </div>
+</section>
+
 </main>
 </div>
 <footer>
