--- a/tourpackage/hangzhou/hangzhou-tea-tour-details.html
+++ b/tourpackage/hangzhou/hangzhou-tea-tour-details.html
@@ -191,6 +191,22 @@
 <li>Tour operates rain or shine</li>
 </ul>
 </section>
+  <section class="reviews">
+  <h2>Guest Reviews</h2>
+  <div class="review">
+    <strong>Max – Argentina</strong>
+    <p>“Loved our guide!! The ancient town of Longmen had a charming atmosphere, and the countryside lunch was delicious. A perfect day trip from Hangzhou.”</p>
+  </div>
+  <div class="review">
+    <strong>Woo Shing  – South Korea</strong>
+    <p>“You should not miss this tour!"</p>
+  </div>
+  <div class="review">
+    <strong>Isabella – Portugal</strong>
+    <p>“Great! The tea picking in Longwu Village was a unique experience. The Song-style tea ceremony was elegant, and the riverside walk at Longlin Dam was peaceful. Our guide was knowledgeable and friendly. Highly recommend!”</p>
+  </div>
+</section>
+
 </main>
 </div>
 <footer>
