--- a/tourpackage/hangzhou/jiaxing-normal-tour-details.html
+++ b/tourpackage/hangzhou/jiaxing-normal-tour-details.html
@@ -197,6 +197,23 @@ End the day at <strong>Yuehe Old Street:</strong> one of Jiaxing’s most charmi
 <li>Tour operates rain or shine</li>
 </ul>
 </section>
+    <section class="reviews">
+  <h2>Guest Reviews</h2>
+  <div class="review">
+    <strong>Anaya – Japan</strong>
+    <p>“The boat ride through Xitang's canals was serene, and the local handicraft workshop was a fun hands-on activity. Our guide made the day memorable with insightful stories. Highly recommend!!”</p>
+  </div>
+  <div class="review">
+    <strong>Mateo – Argentina</strong>
+    <p>“Excellent!! The silk factory tour was fascinating, and the traditional lunch was delicious. A perfect day trip from Hangzhou.”</p>
+  </div>
+  <div class="review">
+    <strong>Kai – Portugal</strong>
+    <p>“Great! The ancient town of Xitang was charming, with its narrow alleys and peaceful canals. The guide was friendly and knowledgeable. Highly recommend!”</p>
+  </div>
+</section>
+
+
 </main>
 </div>
 <footer>
