--- a/tourpackage/jingdezhen/jingdezhen-city-tour-details.html
+++ b/tourpackage/jingdezhen/jingdezhen-city-tour-details.html
@@ -199,6 +199,23 @@ If you’re visiting on a weekday, you’ll explore the Sculpture Ceramic Factor
 <li>Bring sun protection and rain gear as needed</li>
 <li>Tour operates rain or shine</li></ul>
 </section>
+  <section class="reviews">
+  <h2>Guest Reviews</h2>
+  <div class="review">
+    <strong>Nora – Sweden</strong>
+    <p>“The ceramics museum was truly impressive. Seeing the ancient kilns up close gave me a real sense of history. Our guide shared stories that made the culture come alive.”</p>
+  </div>
+  <div class="review">
+    <strong>Jamal – Morocco</strong>
+    <p>“The mix of traditional pottery and modern art was unexpected and fascinating. Walking through Sanbao Village felt like stepping into an artist’s world. Our guide was patient and very informative.”</p>
+  </div>
+  <div class="review">
+    <strong>Elena – Greece</strong>
+    <p>“The live firing demonstrations were captivating, and the local market had so many unique pieces. I appreciated how the guide tailored the tour to our interests, making it personal and engaging.”</p>
+  </div>
+</section>
+
+
 </main>
 </div>
 <footer>
