--- a/tourpackage/nanjing/nanjing-normal-tour-details.html
+++ b/tourpackage/nanjing/nanjing-normal-tour-details.html
@@ -200,6 +200,22 @@ End at the lively Fuzimiao (Confucius Temple) and Qinhuai River Scenic Area. Str
 <li>Bring sun protection and rain gear as needed</li>
 <li>Tour operates rain or shine</li></ul>
 </section>
+  <section class="reviews">
+  <h2>Guest Reviews</h2>
+  <div class="review">
+    <strong>Oliver – Canada</strong>
+    <p>“The walk along Wutong Avenue was so calming. Visiting the Pioneer Bookstore felt like stepping into a different world. Our guide was thoughtful and gave us lots of interesting background about each place.”</p>
+  </div>
+  <div class="review">
+    <strong>Sara – South Africa</strong>
+    <p>“Exploring Da Bao’en Temple Heritage Park was a highlight. The local snacks we tried were delicious. The guide was patient and really attentive to our questions, which made the day more enjoyable.”</p>
+  </div>
+  <div class="review">
+    <strong>Kaito – Japan</strong>
+    <p>“The mix of nature, history, and local culture in this tour was impressive. The evening along Qinhuai River was especially beautiful. The guide shared many little-known facts that made the experience unique.”</p>
+  </div>
+</section>
+
 </main>
 </div>
 <footer>
