--- a/tourpackage/qingdao/qingdao-charm-tour-details.html
+++ b/tourpackage/qingdao/qingdao-charm-tour-details.html
@@ -201,6 +201,22 @@
 <li>Bring sun protection and rain gear as needed</li>
 <li>Tour operates rain or shine</li></ul>
 </section>
+  <section class="reviews">
+  <h2>Guest Reviews</h2>
+  <div class="review">
+    <strong>Luca – Italy</strong>
+    <p>“Strolling along Zhanqiao Pier was a delightful start to the day. The fusion of European architecture and coastal views in Badaguan was captivating. Crafting a lacquer fan was a unique experience, and the night market offered a vibrant end to the tour.”</p>
+  </div>
+  <div class="review">
+    <strong>Amira – Egypt</strong>
+    <p>“Amazing! Exploring the old town's German-style buildings was like stepping into a different era. The lacquer fan workshop was a hands-on cultural immersion. Our guide's insights into Qingdao's history and culture enriched the experience.”</p>
+  </div>
+  <div class="review">
+    <strong>Carlos – Mexico</strong>
+    <p>“The night market was bustling with local flavors and energy. A well-rounded glimpse into Qingdao's charm. Highly recommend!”</p>
+  </div>
+</section>
+
 </main>
 </div>
 <footer>
