--- a/tourpackage/qingdao/qingdao-food-tour-details.html
+++ b/tourpackage/qingdao/qingdao-food-tour-details.html
@@ -216,6 +216,23 @@
 <li>Bring sun protection and rain gear as needed</li>
 <li>Tour operates rain or shine</li></ul>
 </section>
+  <section class="reviews">
+  <h2>Guest Reviews</h2>
+  <div class="review">
+    <strong>Amira – Egypt</strong>
+    <p>“Sampling the seafood soup dumplings and BBQ skewers was a culinary highlight. The walk through the old town offered a glimpse into Qingdao's rich history. The guide was knowledgeable and engaging.”</p>
+  </div>
+  <div class="review">
+    <strong>Amie – Mexico</strong>
+    <p>“St. Michael’s Cathedral's exterior was stunning, and the sunset walk along Guanxiangshan Street was peaceful. The gelato from Kaixue was a refreshing treat. A memorable evening in Qingdao.”</p>
+  </div>
+  <div class="review">
+    <strong>Luke – Italy</strong>
+    <p>“Exploring Pichaiyuan's alleys was a delightful experience. The shrimp pancakes were crispy and flavorful. Our guide provided insightful stories about the local culture. Highly recommend!”</p>
+  </div>
+</section>
+
+
 </main>
 </div>
 <footer>
