--- a/tourpackage/shanghai/shanghai-essential-tour-details.html
+++ b/tourpackage/shanghai/shanghai-essential-tour-details.html
@@ -195,6 +195,22 @@ End your day with breathtaking views of The Bund’s historic buildings and Luji
 <li>Bring sun protection and rain gear as needed</li>
 <li>Tour operates rain or shine</li></ul>
 </section>
+  <section class="reviews">
+  <h2>Guest Reviews</h2>
+  <div class="review">
+    <strong>Isabella – Portugal</strong>
+    <p>“Exploring Wukang Road was a delightful stroll through history. The European-style villas were charming, and the Urban History Exhibition Hall offered insightful exhibits. Our guide was knowledgeable and friendly. Highly recommend!”</p>
+  </div>
+  <div class="review">
+    <strong>Thomas – Argentina</strong>
+    <p>“Loved our guide!! Tianzifang's artistic vibe was refreshing, and the Yu Garden's serenity was a perfect escape. The local lunch was delicious, and the Bund's skyline at night was mesmerizing.”</p>
+  </div>
+  <div class="review">
+    <strong>Shinaya – Japan</strong>
+    <p>“Fantastic experience! The blend of traditional and modern in this tour was remarkable. From the historic sites to the vibrant streets and serene gardens, every stop was memorable. Highly recommend!!”</p>
+  </div>
+</section>
+
 </main>
 </div>
 <footer>
