--- a/tourpackage/shanghai/suzhou-normal-tour-details.html
+++ b/tourpackage/shanghai/suzhou-normal-tour-details.html
@@ -200,6 +200,22 @@
 <li>Bring sun protection and rain gear as needed</li>
 <li>Tour operates rain or shine</li></ul>
 </section>
+  <section class="reviews">
+  <h2>Guest Reviews</h2>
+  <div class="review">
+    <strong>Nina – Sweden</strong>
+    <p>“The quiet beauty of the classical gardens really stood out. Walking along the canals felt peaceful, and learning about the local crafts was fascinating. The guide shared lots of little-known facts that made the tour special.”</p>
+  </div>
+  <div class="review">
+    <strong>Ravi – India</strong>
+    <p>“The day was full of surprises — from the intricate details in the gardens to the lively market streets. The traditional music performance at the end was a perfect cultural touch. Our guide was patient and attentive throughout.”</p>
+  </div>
+  <div class="review">
+    <strong>Sophia – Brazil</strong>
+    <p>“Exploring the old town alleys showed me a side of Suzhou I hadn’t expected. The hands-on silk weaving workshop was fun and informative. The whole tour felt relaxed but engaging, thanks to our thoughtful guide.”</p>
+  </div>
+</section>
+
 </main>
 </div>
 <footer>
