--- a/tourpackage/wuhan/wuhan-melody-tour-details.html
+++ b/tourpackage/wuhan/wuhan-melody-tour-details.html
@@ -209,6 +209,22 @@
 <li>Bring sun protection and rain gear as needed</li>
 <li>Tour operates rain or shine</li></ul>
 </section>
+  <section class="reviews">
+  <h2>Guest Reviews</h2>
+  <div class="review">
+    <strong>Lucian – Italy</strong>
+    <p>“Strolling along the Yangtze River promenade was refreshing. The lacquer fan workshop was a unique experience, and the sunset at Qingchuan Pavilion was breathtaking. Our guide was insightful and friendly. Highly recommend!”</p>
+  </div>
+  <div class="review">
+    <strong>Amira – Egypt</strong>
+    <p>“Exploring Jiqing Folk Street was like stepping into a different era. The Hubei Provincial Museum showcased fascinating artifacts, and the Tanhualin Historic Quarter was vibrant and artistic. The guide was knowledgeable and engaging.”</p>
+  </div>
+  <div class="review">
+    <strong>Caroline – Mexico</strong>
+    <p>“Visiting the Gude Temple was a serene start to the day. The Han Street walk offered a mix of history and modernity, and the craft session added a personal touch. The views from Qingchuan Pavilion were stunning. A memorable day in Wuhan.”</p>
+  </div>
+</section>
+
 </main>
 </div>
 <footer>
