--- a/tourpackage/xiamen/jimei-normal-tour-details.html
+++ b/tourpackage/xiamen/jimei-normal-tour-details.html
@@ -195,6 +195,22 @@
 <li>Bring sun protection and rain gear as needed</li>
 <li>Tour operates rain or shine</li></ul>
 </section>
+  <section class="reviews">
+  <h2>Guest Reviews</h2>
+  <div class="review">
+    <strong>Elena – Greece</strong>
+    <p>“The coastal metro ride was unexpectedly beautiful. Walking around Ao Garden gave me a real sense of local culture. The sunset at Ten-Mile Dyke was peaceful and unforgettable.”</p>
+  </div>
+  <div class="review">
+    <strong>Jamal – Kenya</strong>
+    <p>“Exploring Jiageng Park was relaxing, and the stories about Chen Jiageng were inspiring. The guide was patient and shared lots of history that made the tour meaningful.”</p>
+  </div>
+  <div class="review">
+    <strong>Maya – Peru</strong>
+    <p>“Shigu Road had great food stalls with unique flavors. The Garden Expo Park was well-kept and lovely for a stroll. I enjoyed the slow pace and friendly atmosphere of the tour.”</p>
+  </div>
+</section>
+
 </main>
 </div>
 <footer>
