--- a/tourpackage/xiamen/quanzhou-normal-tour-details.html
+++ b/tourpackage/xiamen/quanzhou-normal-tour-details.html
@@ -189,6 +189,22 @@
 <li>Bring sun protection and rain gear as needed</li>
 <li>Tour operates rain or shine</li></ul>
 </section>
+  <section class="reviews">
+  <h2>Guest Reviews</h2>
+  <div class="review">
+    <strong>Emma – Australia</strong>
+    <p>“Quanzhou’s old streets are full of surprises. Loved learning about the city’s history and culture. The temple visits were impressive, and the local market was lively and fun to explore.”</p>
+  </div>
+  <div class="review">
+    <strong>Hiroshi – Japan</strong>
+    <p>“The blend of cultures here is fascinating. The maritime museum gave great context to Quanzhou’s importance. Our guide was attentive and shared many interesting stories. A very memorable day. Highly recommend”</p>
+  </div>
+  <div class="review">
+    <strong>Ana – Portugal</strong>
+    <p>“Amazing! Walking through the traditional villages and tasting local snacks made this tour special. The architecture and history really stood out. The guide made sure we didn’t miss any hidden gems.”</p>
+  </div>
+</section>
+
 </main>
 </div>
 <footer>
