--- a/tourpackage/xiamen/xiamen-food-tour-details.html
+++ b/tourpackage/xiamen/xiamen-food-tour-details.html
@@ -199,6 +199,22 @@
 <li>Bring sun protection and rain gear as needed</li>
 <li>Tour operates rain or shine</li></ul>
 </section>
+  <section class="reviews">
+  <h2>Guest Reviews</h2>
+  <div class="review">
+    <strong>Nina – Sweden</strong>
+    <p>“Sampling the taro buns was a delicious surprise. Walking through the old streets felt like stepping back in time. The guide shared interesting stories about the local food culture, which made the tour very engaging.”</p>
+  </div>
+  <div class="review">
+    <strong>Raj – India</strong>
+    <p>“The variety of snacks was amazing — I especially enjoyed the herbal jelly with honey. Visiting Longquan Temple added a peaceful break amid all the tasting. The tour had a nice balance of food and history.”</p>
+  </div>
+  <div class="review">
+    <strong>Tamash – Canada</strong>
+    <p>“The pineapple pastries were so fresh and tasty! Exploring the Workers’ Union Hall was enlightening, and the seaside park was a lovely place to end the day. The guide was friendly and attentive throughout.”</p>
+  </div>
+</section>
+
 </main>
 </div>
 <footer>
