--- a/tourpackage/xiamen/xiamen-normal-tour-details.html
+++ b/tourpackage/xiamen/xiamen-normal-tour-details.html
@@ -197,6 +197,22 @@
 <li>Bring sun protection and rain gear as needed</li>
 <li>Tour operates rain or shine</li></ul>
 </section>
+  <section class="reviews">
+  <h2>Guest Reviews</h2>
+  <div class="review">
+    <strong>Anya – Russia</strong>
+    <p>“The coastal views from the cable car were breathtaking. Visiting Nanputuo Temple gave a peaceful start to the day. The local market had so many interesting foods to try — a real treat!”</p>
+  </div>
+  <div class="review">
+    <strong>Kwame – Ghana</strong>
+    <p>“Walking the Mountain-to-Sea Trail was refreshing and less crowded than I expected. The art zone had a cool vibe, and the guide shared lots of local stories that made the tour special.”</p>
+  </div>
+  <div class="review">
+    <strong>Sofia – Colombia</strong>
+    <p>“The evening walk through Zhongshan Road showed a lively side of Xiamen. The mix of street food and local crafts was fantastic. I enjoyed every moment and learned so much about the city’s culture.”</p>
+  </div>
+</section>
+
 </main>
 </div>
 <footer>
