--- a/tourpackage/xiamen/zhangzhou-normal-tour-details.html
+++ b/tourpackage/xiamen/zhangzhou-normal-tour-details.html
@@ -188,6 +188,23 @@ Marvel at the architectural mix of Western columns, Gothic windows, and classic 
 <li>Bring sun protection and rain gear as needed</li>
 <li>Tour operates rain or shine</li></ul>
 </section>
+  <section class="reviews">
+  <h2>Guest Reviews</h2>
+  <div class="review">
+    <strong>Giulia – Italy</strong>
+    <p>“Exploring the Zeng Family Mansion was like stepping into a bygone era. The fusion of Western and Fujian architecture was fascinating. The scented sachet workshop added a personal touch to the day.”</p>
+  </div>
+  <div class="review">
+    <strong>Arjun – India</strong>
+    <p>“Wandering through Zhangzhou's ancient streets was a cultural immersion. The puppet arts exhibition was captivating, and the traditional snacks provided a delightful taste of local flavors.”</p>
+  </div>
+  <div class="review">
+    <strong>Sofia – Brazil</strong>
+    <p>“Visiting the Lin Family Ancestral Hall offered insights into Confucian traditions. The Tianyi Postal Bureau showcased China's early modernization. The guide's knowledge enriched the experience.”</p>
+  </div>
+</section>
+
+
 </main>
 </div>
 <footer>
