--- a/tourpackage/zhangjiajie/zhangjiajie-normal-tour-details.html
+++ b/tourpackage/zhangjiajie/zhangjiajie-normal-tour-details.html
@@ -185,6 +185,22 @@ Admire natural wonders like the Fairy Scattering Flowers and Imperial Brush Peak
 <li>Bring sun protection and rain gear as needed</li>
 <li>Tour operates rain or shine</li></ul>
 </section>
+  <section class="reviews">
+  <h2>Guest Reviews</h2>
+  <div class="review">
+    <strong>Alejandro – Spain</strong>
+    <p>“The views from Tianmen Mountain were absolutely breathtaking. The cable car ride was smooth and scenic, and the natural beauty around us felt almost magical. The guide was friendly and made everything easy to understand.”</p>
+  </div>
+  <div class="review">
+    <strong>Lina – Sweden</strong>
+    <p>“I loved the peaceful hike through the Ten-Mile Gallery. The rock formations and lush greenery were stunning. The Bailong Elevator was quite an experience! Overall, a very relaxing and memorable day.”</p>
+  </div>
+  <div class="review">
+    <strong>Marcus – South Africa</strong>
+    <p>“Zhangjiajie’s landscapes blew me away. The Tianzi Mountain views were spectacular, and the glass skywalk gave a good adrenaline rush. Our guide was informative and made sure we had a great time.”</p>
+  </div>
+</section>
+
 </main>
 </div>
 <footer>
