--- a/tourpackage/zhengzhou/kaifeng-normal-tour-details.html
+++ b/tourpackage/zhengzhou/kaifeng-normal-tour-details.html
@@ -193,6 +193,18 @@ City Walk of the Kaifeng Old Town. Discover Kaifeng beyond tourist routes throug
 <li>Tour operates rain or shine</li>
 </ul>
 </section>
+  <section class="reviews">
+  <h2>Guest Reviews</h2>
+  <div class="review">
+    <strong>Elena – Spain</strong>
+    <p>“The Song Dynasty exhibits were really interesting. Loved the incense workshop — a unique touch! Walking the historic streets felt like a step back in time.”</p>
+  </div>
+  <div class="review">
+    <strong>Ahmed – Egypt</strong>
+    <p>“Qingming Riverside Garden was impressive, especially the live reenactments. Our guide made the history come alive. The night market snacks were delicious.”</p>
+  </div>
+</section>
+
 </main>
 </div>
 <footer>
