--- a/tourpackage/zhengzhou/zhengzhou-normal-tour-details.html
+++ b/tourpackage/zhengzhou/zhengzhou-normal-tour-details.html
@@ -204,6 +204,23 @@
 <li>Bring sun protection and rain gear as needed</li>
 <li>Tour operates rain or shine</li></ul>
 </section>
+  <section class="reviews">
+  <h2>Guest Reviews</h2>
+  <div class="review">
+    <strong>Emilia – Poland</strong>
+    <p>“Wandering through the old streets was a refreshing glimpse into Zhengzhou’s history. Loved the hands-on crafts and the lively night market vibe. A very enjoyable day!”</p>
+  </div>
+  <div class="review">
+    <strong>Jamal – Kenya</strong>
+    <p>“The cultural sites were impressive, especially the ancient city walls. Our guide shared great stories that made the tour more meaningful. Ending the day at the night market was perfect.”</p>
+  </div>
+  <div class="review">
+    <strong>Isabel – Chile</strong>
+    <p>“From traditional workshops to modern art spots, the tour showed me a side of Zhengzhou I never knew. The night market was colorful and full of tasty surprises. Highly recommend!”</p>
+  </div>
+</section>
+
+
 </main>
 </div>
 <footer>
