added pound symbol

--- a/city/zhangjiajie.html
+++ b/city/zhangjiajie.html
@@ -54,7 +54,7 @@
               <img src="../picture/zhangjiajie/2199f3a2c73849ecae5f7ac69b4962ae.jpeg" alt="Zhangjiajie Normal Tour">
               <h3>Zhangjiajie: Sky Adventure, and the Paradise in One Day</h3>
               <p>Explore Zhangjiajie in one day! Marvel at Wulingyuan towering peaks, ride the record-breaking Bailong Elevator, and immerse in Avatar-inspired wonders like Tianzi Mountain and Ten-Mile Gallery.</p>
-              <p><strong>Price:</strong>From 140 per person</p>
+              <p><strong>Price:</strong> From £140 per person</p>
               <a href="../tourpackage/zhangjiajie/zhangjiajie-normal-tour-details.html" class="btn">Book Now</a>
             </div>
             
