--- a/city/shanghai.html
+++ b/city/shanghai.html
@@ -64,7 +64,7 @@
               <img src="../picture/suzhou/00bb32f852f147329bd3a1e480710bd7.jpeg" alt="Suzhou Normal Tour">
               <h3>Suzhou Slow Life: Gardens, Handicrafts & Pingtan Melody</h3>
               <p>Experience the essence of Suzhou in one day — from classical gardens and quiet alleyways to hands-on artistry and an intimate Suzhou Pingtan Music Performance by the canals.</p>
-              <p><strong>Price:</strong>From 115 per person</p>
+              <p><strong>Price:</strong>From £115 per person</p>
               <a href="../tourpackage/shanghai/suzhou-normal-tour-details.html" class="btn">Book Now</a>
             </div>
             
