--- a/calendar.html
+++ b/calendar.html
@@ -311,9 +311,56 @@
 </form>
 
     </div>
-    <footer>
-        &copy; 2025 Skymatz Resources | All Rights Reserved
-    </footer>
+     <footer class="site-footer">
+  <div class="footer-columns">
+    <!-- Column 1: About & Contact -->
+    <div class="footer-col">
+      <h4>About Us</h4>
+       <p>Skymatz Resources is a professional travel company headquartered in the United Kingdom, dedicated to creating unique and unforgettable short-term private travel experiences for international tourists. The company specializes in tailor-made travel itinerary arrangements, offering cultural exploration, culinary delights, natural landscapes, and luxurious leisure experiences, ensuring every trip meets or exceeds client expectations.</p>
+      <h4>Contact Info</h4>
+      <p>Email: <a href="mailto:info@skymatzresources.co.uk">info@skymatzresources.co.uk</a><br>
+      Phone: +44 7724 231701<br>
+      Address: 8 Palace Grove Bromley BR13HA <br>
+                Greater London UK</p>
+    </div>
+
+    <!-- Column 2: Learn More & Recent Posts -->
+    <div class="footer-col">
+      <h4>Learn More</h4>
+      <ul>
+        <li><a href="about.html">Who We Are</a></li>
+        <li><a href="contact.html">Contact Us</a></li>
+        <li><a href="terms.html">Terms & Conditions</a></li>
+        <li><a href="faqs.html">FAQs</a></li>
+        <li><a href="blog.html">Blog</a></li>
+      </ul>
+      <h4>Recent Posts</h4>
+      <ul>
+          <li><a href="blog/chongqing.html">Why Chongqing is My Wonder of the World</a></li>
+          <li><a href="blog/changsha.html">Non-spicy Side of Changsha? We Will Figure It Out For You</a></li>
+          <li><a href="blog/guilin.html">Longji Rice Terrace & Zhaung Lunch - A Day You Won't Forget</a></li>
+          <li><a href="blog/xiamen.html">Outside of Xiaman, Jimei Is a Real Escape</a></li>
+      </ul>
+    </div>
+
+    <!-- Column 3: Payments & Social -->
+    <div class="footer-col">
+      <h4>Payment Accepted</h4>
+      <p>Paypal ~ Visa • MasterCard • Amex • Union Pay </p>
+      <h4>Follow Us</h4>
+      <div class="social-icons">
+          <a href="https://www.instagram.com/skymatz_travel/" aria-label="Instagram" class="social-link">
+              <img src="icon/instagram.svg" alt="Instagram" />
+              <span>skymatz_travel</span>
+            </a>
+      </div>
+    </div>
+  </div>
+
+  <div class="footer-bottom">
+    <p>&copy; 2025 Skymatz Resources | All Rights Reserved</p>
+  </div>
+</footer>
 
     <script>
         // Get the query parameters from the URL
