--- a/tourpackage/chengdu/chengdu-normal-tour-details.html
+++ b/tourpackage/chengdu/chengdu-normal-tour-details.html
@@ -225,7 +225,7 @@ X<strong>iaotong Alley &amp; Paotongshu Street:</strong> Just a short walk away,
 
 </main>
 </div>
- <footer class="site-footer">
+  <footer class="site-footer">
   <div class="footer-columns">
     <!-- Column 1: About & Contact -->
     <div class="footer-col">
@@ -242,18 +242,18 @@ X<strong>iaotong Alley &amp; Paotongshu Street:</strong> Just a short walk away,
     <div class="footer-col">
       <h4>Learn More</h4>
       <ul>
-        <li><a href="about.html">Who We Are</a></li>
-        <li><a href="contact.html">Contact Us</a></li>
-        <li><a href="terms.html">Terms & Conditions</a></li>
-        <li><a href="faqs.html">FAQs</a></li>
-        <li><a href="blog.html">Blog</a></li>
+        <li><a href="../../about.html">Who We Are</a></li>
+        <li><a href="../../contact.html">Contact Us</a></li>
+        <li><a href="../../terms.html">Terms & Conditions</a></li>
+        <li><a href="../../faqs.html">FAQs</a></li>
+        <li><a href="../../blog.html">Blog</a></li>
       </ul>
       <h4>Recent Posts</h4>
       <ul>
-          <li><a href="blog/chongqing.html">Why Chongqing is My Wonder of the World</a></li>
-          <li><a href="blog/changsha.html">Non-spicy Side of Changsha? We Will Figure It Out For You</a></li>
-          <li><a href="blog/guilin.html">Longji Rice Terrace & Zhaung Lunch - A Day You Won't Forget</a></li>
-          <li><a href="blog/xiamen.html">Outside of Xiaman, Jimei Is a Real Escape</a></li>
+          <li><a href="../../blog/chongqing.html">Why Chongqing is My Wonder of the World</a></li>
+          <li><a href="../../blog/changsha.html">Non-spicy Side of Changsha? We Will Figure It Out For You</a></li>
+          <li><a href="../../blog/guilin.html">Longji Rice Terrace & Zhaung Lunch - A Day You Won't Forget</a></li>
+          <li><a href="../../blog/xiamen.html">Outside of Xiaman, Jimei Is a Real Escape</a></li>
       </ul>
     </div>
 
@@ -264,7 +264,7 @@ X<strong>iaotong Alley &amp; Paotongshu Street:</strong> Just a short walk away,
       <h4>Follow Us</h4>
       <div class="social-icons">
           <a href="https://www.instagram.com/skymatz_travel/" aria-label="Instagram" class="social-link">
-              <img src="icon/instagram.svg" alt="Instagram" />
+              <img src="../../icon/instagram.svg" alt="Instagram" />
               <span>skymatz_travel</span>
             </a>
       </div>
