--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
           <li><a href="blog/chongqing.html">Why Chongqing is My Wonder of the World</a></li>
           <li><a href="blog/changsha.html">Non-spicy Side of Changsha? We Will Figure It Out For You</a></li>
           <li><a href="blog/guilin.html">Longji Rice Terrace & Zhaung Lunch - A Day You Won't Forget</a></li>
-          <li><a href="blog/xiamen.html">Outside of Xiaman, Jimei Is a Real Escape</a></li>
+          <li><a href="blog/xiamen.html">Outside of Xiamen, Jimei Is a Real Escape</a></li>
       </ul>
     </div>
 
